<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RegisterFragment" >
    <data>
        <variable
            name="viewModel"
            type="com.example.coplanning.viewmodels.RegisterViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nameTextView"
                style="@style/TextViewParamName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="30dp"
                app:layout_constraintStart_toStartOf="@+id/nameEditText"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="219dp"
                android:layout_height="57dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/enter_username"
                android:inputType="textPersonName"
                android:text="@={viewModel.name}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView"
                app:layout_constraintVertical_bias="0.024" />


            <TextView
                android:id="@+id/surnameTextView"
                style="@style/TextViewParamName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/surname"
                android:textSize="30dp"
                app:layout_constraintStart_toStartOf="@+id/surnameEditText"
                app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

            <EditText
                android:id="@+id/surnameEditText"
                android:layout_width="219dp"
                android:layout_height="57dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/enter_surname"
                android:inputType="text"
                android:text="@={viewModel.surname}"
                app:layout_constraintEnd_toEndOf="@+id/nameEditText"
                app:layout_constraintStart_toStartOf="@+id/nameEditText"
                app:layout_constraintTop_toBottomOf="@+id/surnameTextView" />

            <TextView
                android:id="@+id/usernameTextView"
                style="@style/TextViewParamName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/username"
                android:textSize="30dp"
                app:layout_constraintStart_toStartOf="@+id/usernameEditText"
                app:layout_constraintTop_toBottomOf="@+id/surnameEditText" />

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="219dp"
                android:layout_height="57dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/enter_username"
                android:inputType="text"
                android:text="@={viewModel.username}"
                app:layout_constraintEnd_toEndOf="@+id/surnameEditText"
                app:layout_constraintStart_toStartOf="@+id/surnameEditText"
                app:layout_constraintTop_toBottomOf="@+id/usernameTextView" />

            <TextView
                android:id="@+id/passwordTextView"
                style="@style/TextViewParamName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/password"
                android:textSize="30dp"
                app:layout_constraintStart_toStartOf="@+id/passwordEditText"
                app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="219dp"
                android:layout_height="57dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                app:layout_constraintEnd_toEndOf="@+id/usernameEditText"
                app:layout_constraintStart_toStartOf="@+id/usernameEditText"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="219dp"
                android:layout_height="51dp"
                android:layout_marginTop="12dp"
                android:text="@string/register"
                app:layout_constraintStart_toStartOf="@+id/passwordEditText"
                app:layout_constraintTop_toBottomOf="@id/passwordEditText"
                android:background="@drawable/buttonshape"
                android:textColor="@color/colorWhite"
                android:onClick="@{()->viewModel.performRegister()}"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>