<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="15sp"
    android:paddingTop="15sp"
    android:paddingStart="15sp"
    android:paddingEnd="15sp"
    >
    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteTaskQuestion"
        android:textSize="20dp"
        android:textAppearance="@style/TextViewParamName"
        android:paddingBottom="10dp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/cancelDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cancel_button_shape"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:text="@string/no"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/confirmDelete"
        app:layout_constraintTop_toTopOf="@+id/confirmDelete" />

    <Button
        android:id="@+id/confirmDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:background="@drawable/buttonshape"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="5sp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />


</androidx.constraintlayout.widget.ConstraintLayout>
