<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/customunavailableintervalshape">

    <TextView
        android:id="@+id/textView"
        style="@style/TextViewParamName"
        android:layout_width="52dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:text="@string/from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/customUnavailableDateFrom"
        style="@style/TextViewParamValue"
        android:layout_width="144dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/datetimeshape"
        android:paddingEnd="50dp"
        android:text="@string/set_date"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/customUnavailableTimeFrom"
        style="@style/TextViewParamValue"
        android:layout_width="134dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/customUnavailableDateFrom"
        android:background="@drawable/datetimeshape"
        android:paddingEnd="50dp"
        android:text="@string/set_time"
        app:layout_constraintStart_toEndOf="@+id/customUnavailableDateFrom"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextViewParamName"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/customUnavailableDateTo"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:paddingEnd="50dp"
        android:text="@string/set_date"
        style="@style/TextViewParamValue"
        android:background="@drawable/datetimeshape"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/customUnavailableDateFrom" />

    <TextView
        android:id="@+id/customUnavailableTimeTo"
        style="@style/TextViewParamValue"
        android:layout_width="133dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/customUnavailableDateTo"
        android:background="@drawable/datetimeshape"
        android:paddingEnd="50dp"
        android:text="@string/set_time"
        app:layout_constraintStart_toEndOf="@+id/customUnavailableDateTo"
        app:layout_constraintTop_toBottomOf="@+id/customUnavailableTimeFrom" />

   <!-- <ImageButton
        android:id="@+id/removeCustomUnavailableInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:src="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customUnavailableDateTo" />-->

    <TextView
        android:id="@+id/removeCustomUnavailableInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customUnavailableDateTo"
        android:text="@string/delete"
        android:textStyle="bold"
        android:textColor="@color/colorDarkGreen"/>

</androidx.constraintlayout.widget.ConstraintLayout>