<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginFragment" >

    <data>
        <variable
            name="viewModel"
            type="com.example.coplanning.viewmodels.LoginViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="108dp"
                android:layout_marginLeft="108dp"
                android:layout_marginTop="80dp"
                android:text="@string/login"
                android:textSize="30dp"
                style="@style/TextViewParamName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/loginEditText"
                android:layout_width="219dp"
                android:layout_height="57dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@={viewModel.username}"
                android:hint="@string/enter_username"
                android:inputType="textPersonName"
                android:background="@drawable/rounded_edittext"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/loginTextView"
                app:layout_constraintTop_toBottomOf="@+id/loginTextView"
                app:layout_constraintVertical_bias="0.008"

                />

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="108dp"
                android:layout_marginLeft="108dp"
                android:layout_marginTop="9dp"
                android:text="@string/password"
                android:textSize="30dp"
                style="@style/TextViewParamName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginEditText" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="219dp"
                android:layout_height="57dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/enter_password"
                android:text="@={viewModel.password}"
                android:inputType="textPassword"
                android:background="@drawable/rounded_edittext"
                app:layout_constraintStart_toStartOf="@+id/passwordTextView"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
                app:layout_constraintVertical_bias="0.045" />

            <Button
                android:id="@+id/signButton"
                android:layout_width="219dp"
                android:layout_height="51dp"
                android:layout_marginTop="12dp"
                android:text="@string/sign_in"
                android:background="@drawable/buttonshape"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@+id/passwordEditText"
                app:layout_constraintTop_toBottomOf="@id/passwordEditText"
                android:onClick="@{() -> viewModel.performLogin()}"

                />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="219dp"
                android:layout_height="51dp"
                android:layout_marginTop="12dp"
                android:text="Register"
                android:background="@drawable/buttonshape"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@+id/signButton"
                app:layout_constraintTop_toBottomOf="@id/signButton"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>