<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>
        <variable
            name="viewModel"
            type="com.example.coplanning.viewmodels.TaskEditorViewModel" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.TaskEditorFragment">

        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:verticalScrollbarPosition="right"
            android:visibility="visible"
            android:paddingTop="10dp"
            android:paddingBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="264dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_editor"
                    style="@style/TextViewParamName"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextViewParamName"
                    android:labelFor="@id/taskName"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/taskName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel._name}"
                    android:autofillHints="@string/username"
                    android:background="@drawable/rounded_edittext"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/taskComment"
                    style="@style/TextViewParamName"
                    android:text="@string/comment" />

                <EditText
                    android:id="@+id/taskComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:autofillHints="@string/comment"
                    android:text="@={viewModel._comment}"
                    android:background="@drawable/rounded_edittext"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="125dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/datetimeshape"
                    android:layout_marginTop="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingEnd="50dp"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextViewParamName"
                            android:text="@string/date_from" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/taskDateFrom"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/TextViewParamValue"
                                android:text="@={viewModel._dateFromString}"
                                android:enabled="@{!viewModel.unspecifyDateFrom}"
                                android:background="@drawable/datetimeshape"
                                />
                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:id="@+id/dateFromConfirm"
                                android:checked="@={viewModel._unspecifyDateFrom}"
                                android:text="@string/not_specified"

                                />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextViewParamName"
                            android:text="@string/time_from" />


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/taskTimeFrom"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/TextViewParamValue"
                                android:text="@={viewModel._timeFromString}"
                                android:enabled="@{!viewModel._unspecifyTimeFrom}"
                                android:background="@drawable/datetimeshape"
                                />
                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:id="@+id/timeFromConfirm"
                                android:checked="@={viewModel._unspecifyTimeFrom}"
                                android:text="@string/not_specified"
                                />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/datetimeshape"
                    android:layout_marginTop="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingEnd="50dp"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextViewParamName"
                            android:text="@string/date_to" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/taskDateTo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/TextViewParamValue"
                                android:text="@={viewModel._dateToString}"
                                android:enabled="@{!viewModel._unspecifyDateTo}"
                                android:background="@drawable/datetimeshape"
                                />
                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:id="@+id/dateToConfirm"
                                android:checked="@={viewModel._unspecifyDateTo}"
                                android:text="@string/not_specified"

                                />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/TextViewParamName"
                            android:text="@string/time_to" />


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/taskTimeTo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/TextViewParamValue"
                                android:text="@={viewModel._timeToString}"
                                android:enabled="@{!viewModel._unspecifyTimeTo}"
                                android:background="@drawable/datetimeshape"
                                />
                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:id="@+id/timeToConfirm"
                                android:checked="@={viewModel._unspecifyTimeTo}"
                                android:text="@string/not_specified"
                                />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <CheckBox
                    android:id="@+id/taskVisibility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextViewParamName"
                    android:checked="@={viewModel._visibility}"
                    android:text="@string/visibility" />

                <Button
                    android:id="@+id/taskConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:background="@drawable/buttonshape"
                    android:textColor="@color/colorWhite"
                    android:onClick="@{()->viewModel.saveTask()}"
                    />


            </LinearLayout>
        </ScrollView>

    </FrameLayout>

</layout>